# test_task

./: .gitignore  CMakeLists.txt
src/: FileIO.hpp  List.cpp  List.hpp  main.cpp
tests/: CMakeLists.txt  test_list.cpp
